tests/fixtures/compile_errors/invalid_msg_field.fe
contract Foo:

  pub def foo():
    msg.foo